@@ -17,7 +17,13 @@ if (LIBDBI_FOUND AND SH_BIN AND SQLITE_BIN AND SED_BIN)
         FAIL_REGULAR_EXPRESSION "DBI error;Wrong"
         )
     add_test(smsd-inject "${CMAKE_CURRENT_BINARY_DIR}/gammu-smsd-inject${GAMMU_TEST_SUFFIX}" -c "${CMAKE_CURRENT_BINARY_DIR}/smsd-test/.smsdrc" TEXT 123465 -text "Lorem ipsum.")
+    set_tests_properties("smsd-inject" PROPERTIES
+        FAIL_REGULAR_EXPRESSION "DBI error"
+        )
     if (HAVE_ALARM)
         add_test(smsd-daemon "${CMAKE_CURRENT_BINARY_DIR}/gammu-smsd${GAMMU_TEST_SUFFIX}" -c "${CMAKE_CURRENT_BINARY_DIR}/smsd-test/.smsdrc" -X 10)
+        set_tests_properties("smsd-daemon" PROPERTIES
+            FAIL_REGULAR_EXPRESSION "DBI error"
+            )
     endif (HAVE_ALARM)
 endif (LIBDBI_FOUND AND SH_BIN AND SQLITE_BIN AND SED_BIN)
