@@ -25,7 +25,10 @@
 /* Disconnects from a database */
 static GSM_Error SMSDMySQL_Free(GSM_SMSDConfig *Config)
 {
-	mysql_close(&Config->DBConnMySQL);
+	if (Config->connected) {
+		mysql_close(&Config->DBConnMySQL);
+		Config->connected = false;
+	}
 	return ERR_NONE;
 }
 
@@ -133,6 +136,7 @@ static GSM_Error SMSDMySQL_Init(GSM_SMSDConfig *Config)
 	mysql_free_result(Res);
 	mysql_query(&Config->DBConnMySQL,"SET NAMES utf8;");
 	SMSD_Log(0, Config, "Connected to Database: %s on %s", Config->database, Config->PC);
+	Config->connected = true;
 	return ERR_NONE;
 }
 
@@ -501,8 +505,8 @@ static GSM_Error SMSDMySQL_FindOutboxSMS(GSM_MultiSMSMessage *sms, GSM_SMSDConfi
 			SMSD_Log(0, Config, "Error updating number of received messages (%s)\n", __FUNCTION__);
 			return ERR_UNKNOWN;
 		}
+		mysql_free_result(Res);
 	}
-	mysql_free_result(Res);
   	return ERR_NONE;
 }
 
