@@ -19,6 +19,7 @@ ChangeLog
 
 [-] * Fix some memory leaks found by cppcheck.
 [-] * Implemented reconnecting/retrying in DBI driver.
+[-] * Fix memory leaks in SMSD found by valgrind.
 
 20090202 - 1.22.93
 
